# GRACE_CSBJ

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  env example  pyproject.toml  requirements.txt
LLM/: APIEmbeddings.py  APILLM.py  APIReranker.py  MayoAPILLM.py
backend/: rag_database_build.py
chatbot/: hpv_chatbot_RAG.py  hpv_chatbot_agent.py  hpv_vaccine.py
data/example_articles/Economic Burden/Cancer/: Annual Report to the Nation on the Status of Cancer Part 2 - NCI.txt  Smith et al., 2019 - Financial burdens of cancer treatment.txt  The Economic Burden of Cancer _ The Cancer Atlas.txt  Wu et al., 2020 - Economic burden Cervical Cancer.txt
data/example_articles/Emotional Response/Cancer/: Jentschke et al., 2020 - Cervical Cancer screening and stress.txt  Rosser et al., 2016 - Stigma of Cervical Cancer.txt
data/example_articles/Prevention/Cancer/: Mayo Clinic - Cancer Prevention.txt
data/example_articles/Types of cancer by HPV/: NCI - HPV and Cancer.txt  Oropharyngeal Cancer Types _ Johns Hopkins Medicine.txt  Types of anal cancer _ Cancer Research UK.txt  What Is Cervical Cancer_ _ Types of Cervical Cancer.txt
data/others/: polished_scripts.txt  scripts.txt  scripts_full.txt  scripts_tmp.txt  user_information.txt
frontend/: GRACE.py  script_builder.py
tools/: chatbot_answer_question.py  extract_scripts_from_flowchat.py  load_metadata.py  user_background.py  user_info.py  user_sentiment_analysis.py
tools/data_process/: db_test.py  langchain_generate_local_knowledge_base.py  pdf_loader.py  pdf_txt_cleaner.py  text_QA_extraction.py
(+20 files in other folders)
